<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ac_button"/>
b
    <!--    First row-->
    <Button
        android:id="@+id/ac_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="AC"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seven_button"
        app:layout_constraintEnd_toStartOf="@id/negate_button"/>

    <Button
        android:id="@+id/negate_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/negate_text"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toEndOf="@id/ac_button"
        app:layout_constraintBottom_toTopOf="@id/eight_button"
        app:layout_constraintEnd_toStartOf="@id/mod_button"/>

    <Button
        android:id="@+id/mod_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mod_text"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toEndOf="@id/negate_button"
        app:layout_constraintBottom_toTopOf="@id/nine_button"
        app:layout_constraintEnd_toStartOf="@id/div_button"/>
    <Button
        android:id="@+id/div_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division_text"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toEndOf="@id/mod_button"
        app:layout_constraintBottom_toTopOf="@id/multi_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--    Second row-->
    <Button
        android:id="@+id/seven_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven_text"
        app:layout_constraintTop_toBottomOf="@id/ac_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/four_button"
        app:layout_constraintEnd_toStartOf="@id/eight_button"/>
    <Button
        android:id="@+id/eight_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight_text"
        app:layout_constraintTop_toBottomOf="@id/negate_button"
        app:layout_constraintStart_toEndOf="@id/seven_button"
        app:layout_constraintBottom_toTopOf="@id/five_button"
        app:layout_constraintEnd_toStartOf="@id/nine_button"/>

    <Button
        android:id="@+id/nine_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine_text"
        app:layout_constraintTop_toBottomOf="@id/mod_button"
        app:layout_constraintStart_toEndOf="@id/eight_button"
        app:layout_constraintBottom_toTopOf="@id/six_button"
        app:layout_constraintEnd_toStartOf="@id/multi_button"/>
    <Button
        android:id="@+id/multi_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multi_text"
        app:layout_constraintTop_toBottomOf="@id/div_button"
        app:layout_constraintStart_toEndOf="@id/nine_button"
        app:layout_constraintBottom_toTopOf="@id/minus_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--    Third row-->
    <Button
        android:id="@+id/four_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four_text"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/one_button"
        app:layout_constraintEnd_toStartOf="@id/five_button"/>
    <Button
        android:id="@+id/five_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five_text"
        app:layout_constraintTop_toBottomOf="@id/eight_button"
        app:layout_constraintStart_toEndOf="@id/four_button"
        app:layout_constraintBottom_toTopOf="@id/two_button"
        app:layout_constraintEnd_toStartOf="@id/six_button"/>

    <Button
        android:id="@+id/six_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six_text"
        app:layout_constraintTop_toBottomOf="@id/nine_button"
        app:layout_constraintStart_toEndOf="@id/five_button"
        app:layout_constraintBottom_toTopOf="@id/three_button"
        app:layout_constraintEnd_toStartOf="@id/minus_button"/>
    <Button
        android:id="@+id/minus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus_text"
        app:layout_constraintTop_toBottomOf="@id/multi_button"
        app:layout_constraintStart_toEndOf="@id/six_button"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--    Fourth row-->
    <Button
        android:id="@+id/one_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one_text"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zero_button"
        app:layout_constraintEnd_toStartOf="@id/three_button"/>
    <Button
        android:id="@+id/two_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two_text"
        app:layout_constraintTop_toBottomOf="@id/five_button"
        app:layout_constraintStart_toEndOf="@id/one_button"
        app:layout_constraintBottom_toTopOf="@id/period_button"
        app:layout_constraintEnd_toStartOf="@id/three_button"/>

    <Button
        android:id="@+id/three_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three_text"
        app:layout_constraintTop_toBottomOf="@id/six_button"
        app:layout_constraintStart_toEndOf="@id/two_button"
        app:layout_constraintBottom_toTopOf="@id/period_button"
        app:layout_constraintEnd_toStartOf="@id/add_button"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_text"
        app:layout_constraintTop_toBottomOf="@id/minus_button"
        app:layout_constraintStart_toEndOf="@id/three_button"
        app:layout_constraintBottom_toTopOf="@id/equals_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--    Fifth row-->
    <Button
        android:id="@+id/zero_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero_text"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/period_button"/>
    <Button
        android:id="@+id/period_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot_text"
        app:layout_constraintTop_toBottomOf="@id/two_button"
        app:layout_constraintStart_toEndOf="@id/zero_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equals_button"/>

    <Button
        android:id="@+id/equals_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals_text"
        app:layout_constraintTop_toBottomOf="@id/add_button"
        app:layout_constraintStart_toEndOf="@id/period_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>